Add main definition to package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express-msgpack",
   "version": "0.0.1",
   "description": "Transparent MessagePack middleware for Express",
+  "main": "index.js",
   "scripts": {
     "install:peers": "node ./install-peers.js",
     "test": "jest",
