Add automatic deployment to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ install:
   - npm run install:peers
 
 script: npm test
+
+deploy:
+  - provider: npm
+    email: $NPM_EMAIL_ADDRESS
+    api_key: $NPM_AUTH_TOKEN
+    on:
+      tags: true
