--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,17 @@ install:
   - npm ci
   - npm run install:peers
 
-script: npm test
+script:
+  - npm run lint
+  - npm test
+
+before_deploy:
+  - npm run build
 
 deploy:
-  - provider: npm
-    email: $NPM_EMAIL_ADDRESS
-    api_key: $NPM_AUTH_TOKEN
-    on:
-      tags: true
+  provider: npm
+  email: $NPM_EMAIL_ADDRESS
+  api_key: $NPM_AUTH_TOKEN
+  skip_cleanup: true
+  on:
+    tags: true
