--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,17 @@ install:
   - npm ci
   - npm run install:peers
 
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
 script:
   - npm run lint
-  - npm test
+  - npm test -- --coverage
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
 before_deploy:
   - npm run build
