--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "curly": "error",
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
+    "no-trailing-spaces": "error",
     "no-unused-vars": ["error", { "ignoreRestSiblings": true }],
     "no-var": "error",
     "object-curly-spacing": ["error", "always"],
