--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
     "node": true
   },
   "extends": [
-    "eslint:recommended"
+    "@codeyourfuture/standard"
   ],
   "overrides": [
     {
@@ -20,20 +20,6 @@
   ],
   "parser": "babel-eslint",
   "rules": {
-    "arrow-parens": "error",
-    "brace-style": ["error", "1tbs", { "allowSingleLine": false }],
-    "comma-dangle": ["error", "always-multiline"],
-    "curly": "error",
-    "indent": ["error", 2],
-    "linebreak-style": ["error", "unix"],
-    "no-trailing-spaces": "error",
-    "no-unused-vars": ["error", { "ignoreRestSiblings": true }],
-    "no-var": "error",
-    "object-curly-spacing": ["error", "always"],
-    "operator-linebreak": ["error", "before"],
-    "prefer-arrow-callback": "error",
-    "prefer-const": "error",
-    "quotes": ["error", "double"],
-    "semi": "error"
+    "indent": ["error", 2]
   }
 }
