--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@codeyourfuture/eslint-config-standard": "^2.0.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.0.0",
     "eslint-plugin-jest": "^24.0.0",
