--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.2",
   "description": "Transparent MessagePack middleware for Express",
   "main": "dist/index.js",
-  "files": [],
+  "files": [
+    "dist/index.d.ts"
+  ],
   "scripts": {
     "prebuild": "rimraf dist/*",
-    "build": "babel src --out-dir dist --ignore **/__tests__",
+    "build": "tsc",
     "e2e": "./bin/smoke.sh --local",
-    "lint": "eslint .",
+    "lint": "eslint . --ext=.js,.ts",
     "ship": "npm run lint && npm test && npm run e2e",
     "test": "jest --modulePathIgnorePatterns '<rootDir>/smoke'",
     "test:watch": "npm run test -- --watch"
@@ -22,7 +24,8 @@
     "middleware",
     "messagepack",
     "msgpack",
-    "json"
+    "json",
+    "typescript"
   ],
   "author": "Jonathan Sharpe <mail@jonrshar.pe>",
   "license": "ISC",
@@ -37,19 +40,28 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
     "@codeyourfuture/eslint-config-standard": "^2.0.2",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.0.0",
     "eslint-plugin-jest": "^24.0.0",
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "rimraf": "^3.0.0",
-    "supertest": "^6.0.0"
+    "supertest": "^6.0.0",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "raw-body": "^2.4.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
