--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,12 +5,14 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-18.04
-    if: github.event_name != 'push' || !contains(github.event.head_commit.message, '[skip ci]')
+    strategy:
+      matrix:
+        node: [ '10', '12', '14', '16' ]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
-        node-version: '10'
+        node-version: ${{ matrix.node }}
     - uses: actions/cache@v2
       with:
         path: ~/.npm
