--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-msgpack",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Transparent MessagePack middleware for Express",
   "main": "dist/index.js",
   "files": [
@@ -57,7 +57,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "raw-body": "^2.4.0"
+    "raw-body": "^2.4.0",
+    "@msgpack/msgpack": "^1.3.2 || ^2.0.0"
   },
   "jest": {
     "preset": "ts-jest",
