--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@codeyourfuture/eslint-config-standard": "^3.0.0",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.21",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -57,8 +57,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "raw-body": "^2.4.0",
-    "@msgpack/msgpack": "^1.3.2 || ^2.0.0"
+    "raw-body": "^2.4.0"
   },
   "jest": {
     "preset": "ts-jest",
