--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,10 +4,10 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        node: [ '10', '12', '14', '16' ]
+        node: [ '12', '14', '16' ]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
@@ -28,7 +28,7 @@ jobs:
         CC_TEST_REPORTER_ID: 47283c50a0f1654abe1454ac936de832b4c668e579eb10c1aefa1545e4e77e1d
     - run: npm run e2e
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
     steps:
@@ -38,7 +38,7 @@ jobs:
       run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
     - uses: actions/setup-node@v1
       with:
-        node-version: '14'
+        node-version: '16'
     - uses: actions/cache@v2
       with:
         path: ~/.npm
