--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "https://github.com/textbook/express-msgpack/issues"
   },
   "homepage": "https://github.com/textbook/express-msgpack#readme",
+  "funding": "https://ko-fi.com/textbook",
   "optionalDependencies": {
     "@msgpack/msgpack": "^1.3.2 || ^2.0.0"
   },
