--- a/.eslintrc
+++ b/.eslintrc
@@ -14,10 +14,17 @@
         "jest/expect-expect": [
           "error",
           { "assertFunctionNames": ["expect", "request.**.expect"] }
-        ]
+        ],
+        "jest/no-commented-out-tests": "error",
+        "jest/no-disabled-tests": "error"
       }
     }
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"]
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-non-null-assertion": "error",
+    "@typescript-eslint/no-unused-vars": "error"
+  }
 }
