--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Transparent MessagePack middleware for Express",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist/"
   ],
