--- a/package.json
+++ b/package.json
@@ -37,30 +37,30 @@
   "homepage": "https://github.com/textbook/express-msgpack#readme",
   "funding": "https://ko-fi.com/textbook",
   "optionalDependencies": {
-    "@msgpack/msgpack": "^1.3.2 || ^2.0.0"
+    "@msgpack/msgpack": "^2.8.0"
   },
   "peerDependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@codeyourfuture/eslint-config-standard": "^3.0.3",
-    "@types/express": "^4.17.14",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.4",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.1",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
-    "eslint-plugin-jest": "^27.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-jest": "^27.2.1",
     "express": "^4.18.2",
-    "jest": "^29.1.2",
+    "jest": "^29.4.3",
     "rimraf": "^3.0.2",
-    "supertest": "^6.3.0",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "raw-body": "^2.4.0"
+    "raw-body": "^2.5.2"
   },
   "jest": {
     "modulePathIgnorePatterns": [
