--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,33 +4,33 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node: [ '14', '16' ]
+        node: [ '14', '16', '18' ]
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node }}
         cache: 'npm'
     - run: npm ci
     - run: npm run lint
     - run: npm run test -- --coverage
-    - uses: paambaati/codeclimate-action@v2.7.4
+    - uses: paambaati/codeclimate-action@v3.2.0
       env:
         CC_TEST_REPORTER_ID: 47283c50a0f1654abe1454ac936de832b4c668e579eb10c1aefa1545e4e77e1d
     - run: npm run e2e
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     if: startsWith(github.ref, 'refs/tags/v')
     needs: build
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Get full tag
       id: full_tag
-      run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
-    - uses: actions/setup-node@v2
+      run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
+    - uses: actions/setup-node@v3
       with:
         node-version: '16'
         cache: 'npm'
