--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node: [ '14', '16', '18' ]
+        node: [ '16.0', '16', '18', '20' ]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
@@ -32,7 +32,7 @@ jobs:
       run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
     - uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '18'
         cache: 'npm'
     - run: npm ci
     - run: npm run build
