--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   },
   "extends": [
     "@codeyourfuture/standard",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/stylistic",
+    "plugin:@typescript-eslint/strict"
   ],
   "overrides": [
     {
@@ -19,12 +20,5 @@
         "jest/no-disabled-tests": "error"
       }
     }
-  ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "rules": {
-    "@typescript-eslint/no-explicit-any": "error",
-    "@typescript-eslint/no-non-null-assertion": "error",
-    "@typescript-eslint/no-unused-vars": "error"
-  }
+  ]
 }
