--- a/package.json
+++ b/package.json
@@ -55,20 +55,20 @@
   },
   "devDependencies": {
     "@codeyourfuture/eslint-config-standard": "^4.0.3",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
-    "@types/node": "^18.16.19",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-jest": "^27.2.3",
-    "express": "^4.18.2",
-    "jest": "^29.6.1",
-    "rimraf": "^5.0.1",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^18.19.31",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "rimraf": "^5.0.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "typescript": "~5.3.3"
   },
   "dependencies": {
     "raw-body": "^2.5.2"
