--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "rimraf": "^5.0.7",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
-    "typescript": "~5.3.3"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "raw-body": "^2.5.2"
