--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node: [ '18.12', '18', '20' ]
+        node: [ '18.12', '18', '20', '22' ]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
