--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,4 +38,21 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm publish
+  smoke:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: deploy
+    environment:
+      name: npm
+      url: https://www.npmjs.com/package/express-msgpack
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+    - uses: actions/checkout@v6
+    - uses: actions/setup-node@v6
+      with:
+        node-version: '24'
+        cache: 'npm'
+    - run: npm install --global npm@latest
     - run: ./bin/smoke.js --tag ${{ github.ref_name }}
