--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,11 @@
 name: Node.js CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ 'main' ]
+    tags: [ 'v*' ]
+  pull_request:
+    branches: [ 'main' ]
 
 jobs:
   build:
