--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:esm": "npm run compile",
     "compile": "tsc --project ./tsconfig.build.json",
     "e2e": "node ./bin/smoke.js --local",
-    "lint": "eslint . --ext=.js,.ts",
+    "lint": "eslint .",
     "ship": "npm run lint && npm test && npm run e2e",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
@@ -54,21 +54,21 @@
     "express": "^4.17.1 || ^5"
   },
   "devDependencies": {
-    "@codeyourfuture/eslint-config-standard": "^5.1.0",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^18.19.33",
-    "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-jest": "^28.5.0",
-    "express": "^4.19.2",
-    "jest": "^29.7.0",
-    "rimraf": "^5.0.7",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.5"
+    "@codeyourfuture/eslint-config-standard": "^7.0.0",
+    "@types/express": "^4.17.25",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^18.19.130",
+    "@types/supertest": "^6.0.3",
+    "eslint": "^9.39.1",
+    "eslint-plugin-jest": "^29.2.0",
+    "express": "^4.21.2",
+    "globals": "^16.5.0",
+    "jest": "^30.2.0",
+    "rimraf": "^5.0.10",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.47.0"
   },
   "dependencies": {
     "raw-body": "^2.5.2"
