Update TS config for Node 20

--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   "scripts": {
     "prebuild": "rimraf dist/*",
     "build": "npm run build:esm && npm run build:cjs",
-    "build:cjs": "npm run compile -- --module commonjs --outDir dist/cjs",
+    "build:cjs": "tsc --project ./tsconfig.cjs.json",
     "postbuild:cjs": "mv dist/cjs/index.js dist/cjs/index.cjs",
-    "build:esm": "npm run compile",
-    "compile": "tsc --project ./tsconfig.build.json",
+    "build:esm": "tsc --project ./tsconfig.esm.json",
     "e2e": "node ./bin/smoke.js --local",
     "lint": "eslint .",
     "ship": "npm run lint && npm test && npm run e2e",
@@ -55,9 +54,10 @@
   },
   "devDependencies": {
     "@codeyourfuture/eslint-config-standard": "^7.0.0",
+    "@tsconfig/node20": "^20.1.8",
     "@types/express": "^4.17.25",
     "@types/jest": "^30.0.0",
-    "@types/node": "^18.19.130",
+    "@types/node": "^20.19.25",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.39.1",
     "eslint-plugin-jest": "^29.2.0",
