--- a/package.json
+++ b/package.json
@@ -54,14 +54,15 @@
   },
   "devDependencies": {
     "@codeyourfuture/eslint-config-standard": "^7.0.0",
+    "@msgpack/msgpack": "^3.1.2",
     "@tsconfig/node20": "^20.1.8",
-    "@types/express": "^4.17.25",
+    "@types/express": "^5.0.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.25",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.39.1",
     "eslint-plugin-jest": "^29.2.0",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "rimraf": "^6.1.2",
